methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:4: error: '(' expected but identifier found.
  if estFaceMur() {
     ^SlugTracking:13: error: illegal start of simple expression
} 
^