methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  if estFaceMur() {
    return (false)
  }
  else {
    avance()
    res = (getCouleurSol()==Color.green)
    recule()
    return res
  }
}